--- a/.github/workflows/layer-builder.yml
+++ b/.github/workflows/layer-builder.yml
@@ -18,14 +18,15 @@ jobs:
     
     - name: Install system dependencies
       run: |
-        yum update -y
-        yum install -y \
+        dnf update -y
+        dnf install -y \
           gcc-c++ \
           make \
           libheif-devel \
           vips-devel \
           pkgconfig \
-          zip
+          zip \
+          findutils
         
     - name: Install dependencies
       run: npm ci
