--- a/.github/workflows/layer-builder.yml
+++ b/.github/workflows/layer-builder.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v4
         
     - name: Package with SAM
-      run: npm run package
+      run: npm run build
       
     - name: Create zip from SAM artifacts
       run: |
