--- a/.github/workflows/layer-builder.yml
+++ b/.github/workflows/layer-builder.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   create_release:
-    if: github.event.pull_request.merged == true
+    #if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
