--- a/.github/workflows/layer-builder.yml
+++ b/.github/workflows/layer-builder.yml
@@ -20,6 +20,11 @@ jobs:
         id: release
         with:
           release-type: node
+
+      - name: Get branch name
+        if: ${{ steps.release.outputs.release_created == false }}
+        run: |
+          echo "Branch name: ${{ steps.release.outputs.pr_branch_name }}"
       - uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created == false }}
         with:
