--- a/.github/workflows/layer-builder.yml
+++ b/.github/workflows/layer-builder.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Commit changes
         if: ${{ steps.release.outputs.release_created == false }}
         run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add build/lambda-layer.zip
